@@ -1,7 +1,7 @@
 Package: Pigengene
 Type: Package
 Title: Infers biological signatures from gene expression data
-Version: 1.11.32
+Version: 1.11.34
 Date: 2016-03-31
 Author: Habil Zare, Amir Foroushani, Rupesh Agrahari, and Meghan Short
 Maintainer: Habil Zare <zare@u.washington.edu>
@@ -10,7 +10,7 @@ biocViews: GeneExpression, RNASeq, NetworkInference, Network,
         Transcriptomics, Classification, Clustering, DecisionTree,
         DimensionReduction, PrincipalComponent, Microarray,
         Normalization, ImmunoOncology
-Depends: R (>= 3.3.0), graph
+Depends: R (>= 3.5.0), graph
 Description: Pigengene package provides an efficient way to infer
         biological signatures from gene expression profiles. The
         signatures are independent from the underlying platform, e.g.,
