@@ -1,11 +1,33 @@
 %% Put the items in alphabetic order.
 
+@article{agrahari2018applications,
+  title={Applications of Bayesian network models in predicting types of hematological malignancies},
+  author={Agrahari, Rupesh and Foroushani, Amir and Docking, T Roderick and Chang, Linda and Duns, Gerben and Hudoba, Monika and Karsan, Aly and Zare, Habil},
+  journal={Scientific reports},
+  volume={8},
+  number={1},
+  pages={6951},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
 @article{foroushani2016large,
   title={Large-scale gene network analysis reveals the significance of extracellular matrix pathway and homeobox genes in acute myeloid leukemia},
   author={Foroushani, A and Agrahari, R and Docking, R and Karsan, A and Zare, H},
   journal={In preparation}
 }
- 
+
+@article{langfelder2008wgcna,
+  title={WGCNA: an R package for weighted correlation network analysis},
+  author={Langfelder, Peter and Horvath, Steve},
+  journal={BMC bioinformatics},
+  volume={9},
+  number={1},
+  pages={559},
+  year={2008},
+  publisher={BioMed Central Ltd}
+}
+
 @article{mills2009microarray,
   title={Microarray-based classifiers and prognosis models identify subgroups with distinct clinical outcomes and high risk of AML transformation of myelodysplastic syndrome},
   author={Mills, Ken I and Kohlmann, Alexander and Williams, P Mickey and Wieczorek, Lothar and Liu, Wei-min and Li, Rachel and Wei, Wen and Bowen, David T and Loeffler, Helmut and Hernandez, Jesus M and others},
